# arctic-radioisotopes

./: LICENSE  README.md  environment.lock.yml  environment.yml  index.md  myst.yml  pyproject.toml
.github/workflows/: python-app.yml
arctic-isotopes/: CS1-example.ipynb  data_handling.py  regrid_tripolar_to_platecarree.sh  regridding-demo.ipynb  regridding.ipynb  test-regridding.py  test_regridding.py  uranium-236.ipynb
