[project]
name = "fair2adapt"
version = "0.1.0"
description = "FAIR2Adapt case study 1: Modeling the spread of radioactive isotopes in the arctic"
authors = [{name = "Even Moa Myklebust", email = "even@simula.no"}]
readme = "README.md"
license = "Proprietary"
requires-python = ">=3.11,<3.12"

dependencies = [
    "ipywidgets>=8.1.5",
    "pathlib>=1.0.1",
    "pre-commit>=4.1.0",
    "xarray>=2025.1.1",
    "cartopy>=0.24.0",
    "cftime>=1.6.4",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
    "matplotlib-inline>=0.1.7",
    "nbformat>=5.10.4",
    "netcdf4>=1.7.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "scipy>=1.15.1",
    "s3fs (>=2025.2.0,<2026.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "xesmf (>=0.8.8,<0.9.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "cf-xarray (>=0.10.0,<0.11.0)",
    "sparse (>=0.15.5,<0.16.0)",
    "numba (>=0.61.0,<0.62.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
